tests/comp/sem/invalid/nullref.mj
class A {

	public int foo;

	public static void main(String[] args) {
		/*** null.foo; ***/
	}

}
